--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             >
               <img src="img/youtube.svg" alt="ícone youtube" />
             </a>
-          </li class="facebook">
-
-          <li>
+          </li>
+          
+          <li class="facebook"> 
             <a href="http://facebook.com/fernandoo.rodrigues9" target="_blank">
               <img src="img/facebook.svg" alt="facebook" />
             </a>
