--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      href=""
       rel="stylesheet"
     />
   </head>
@@ -33,12 +33,12 @@
           <img src="img/github.svg" alt="github" /><span userLogin>Fernando</span> </a
         >
 
-        <p id="userBio">An instructor focused on helping people start programming for web</p>
+        <p id="userBio"></p>
 
         <ul id="socialLinks">
           <li class="youtube">
             <a
-              href="https://www.youtube.com/channel/UCqnbYmfcy3oKrqKn6miryEA"
+              href="https://www.youtube.com/"
               target="_blank"
             >
               <img src="img/youtube.svg" alt="ícone youtube" />
@@ -46,20 +46,20 @@
           </li class="facebook">
 
           <li class="facebook">
-            <a href="http://facebook.com/fernandoo.rodrigues9" target="_blank">
+            <a href="http://facebook.com/" target="_blank">
               <img src="img/facebook.svg" alt="facebook" />
             </a>
           </li>
 
           <li class="instagram">
-            <a href="http://instagram.com/fernandoo.o.r" target="_blank">
+            <a href="http://instagram.com/" target="_blank">
               <img src="img/instagram.svg" alt="instagram" />
             </a>
           </li>
 
           <li class="twitter">
             <a
-              href="http://twitter.com/fernandodeoliveirarodrigues"
+              href="http://twitter.com/"
               target="_blank"
             >
               <img src="img/twitter.svg" alt="twitter" />
