--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <link
-      href=""
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -24,7 +24,7 @@
           <span>
             <img src="img/rocketseat.svg" alt="rocket seat" />
           </span>
-          <img src="http://lorempixel.com/185/185/people/" alt="Foto pessoal" id="userPhoto"/>
+          <img src="" alt="Foto pessoal" id="userPhoto"/>
         </div>
 
         <h1 id="userName">Fernando De Oliveira Rodrigues</h1>
