--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
           <li class="twitter">
             <a
-              href="http://twitter.com/"
+              href="http://twitter.com"
               target="_blank"
             >
               <img src="img/twitter.svg" alt="twitter" />
